[package]
name = "nexus-sdk"
version = "0.1.0"
edition = "2024"
authors = ["Nexus Contributors"]
description = "Official Rust SDK for Nexus graph database"
license = "Apache-2.0"
repository = "https://github.com/hivellm/nexus"
homepage = "https://github.com/hivellm/nexus"
documentation = "https://docs.rs/nexus-sdk"
keywords = ["graph", "database", "cypher", "neo4j-compatible"]
categories = ["database", "web-programming"]

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"

# URL handling
url = "2.5"

# Base64 encoding for auth
base64 = "0.22"

# Logging (optional)
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.5"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "with_auth"
path = "examples/with_auth.rs"

[[example]]
name = "performance_monitoring"
path = "examples/performance_monitoring.rs"

[[example]]
name = "transactions"
path = "examples/transactions.rs"

[[example]]
name = "query_builder"
path = "examples/query_builder.rs"

[lib]
name = "nexus_sdk"
path = "src/lib.rs"
