[package]
# `nexus-sdk` on crates.io is owned by the unrelated "Nexus
# Workflow" project (placeholder 0.0.0, first registered before
# this repo existed). Renamed to `nexus-graph-sdk` so the
# `cargo publish` chain actually accepts the upload. The in-crate
# module still imports as `nexus_sdk` (see `[lib] name` below)
# so existing code stays source-compatible.
name = "nexus-graph-sdk"
version = "1.14.0"
edition = "2024"
authors = ["Nexus Contributors"]
description = "Official Rust SDK for Nexus graph database"
license = "Apache-2.0"
repository = "https://github.com/hivellm/nexus"
homepage = "https://github.com/hivellm/nexus"
documentation = "https://docs.rs/nexus-graph-sdk"
readme = "README.md"
keywords = ["graph", "database", "cypher", "neo4j-compatible"]
categories = ["database", "web-programming"]

[dependencies]
# HTTP client (fallback transport for `http://` / `https://` endpoints)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.40", features = ["full"] }

# Native binary RPC transport (default on `nexus://` endpoints).
# Both `path` and `version` are required: `cargo publish` picks the
# version from crates.io and rejects the crate unless every
# path-dependency also carries a published version specifier. The
# path is anchored at `../../crates/nexus-protocol` because the
# workspace crates live under `crates/` since the 2026-04 reshuffle.
nexus-protocol = { path = "../../crates/nexus-protocol", version = "1.14.0" }

# Async trait for the Transport interface
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"

# URL handling
url = "2.5"

# Base64 encoding for auth
base64 = "0.22"

# Logging (optional)
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.5"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "with_auth"
path = "examples/with_auth.rs"

[[example]]
name = "performance_monitoring"
path = "examples/performance_monitoring.rs"

[[example]]
name = "transactions"
path = "examples/transactions.rs"

[[example]]
name = "query_builder"
path = "examples/query_builder.rs"

[lib]
name = "nexus_sdk"
path = "src/lib.rs"
